--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -1,22 +1,29 @@
 /* Document Level  */
-body {
-  padding-top: 60px;
+html, body {
+  height: 100%;
+}
+/* Custom Classes */
+
+header {
+  height: 6%;
 }
 
-/* Custom Classes */
+section {
+  height: 94%;
+}
+
 .overview-pane {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background: red;
-  //display: block;
+  background: #f1f1f1;
 }
+
 .visualisation-pane {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background: blue;
-  //display: block;
+  background: #f1f1f1;
 }
 
 /* Bootstrap Overrides */
@@ -24,6 +31,35 @@ body {
     min-height: 100%;
     height: 100%;
 }
+
+.custom-main-interface {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.custom-overview-pane {
+  padding-right: 7.5px;
+}
+
+.custom-visualisation-pane {
+  padding-left: 7.5px;
+}
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.navbar-header {
+  padding-left: 3%;
+}
+.navbar-right {
+  padding-right: 3%;
+}
+
+/*.container {
+  margin-left: 0;
+  margin-right: 0;
+}*/
 
 /* Media Queries  */
 @media (max-width: 979px) {
