--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -12,6 +12,17 @@ section {
   height: 94%;
 }
 
+/* Nav Bar*/
+.upload-form-meta {
+  margin-top: 30px;
+}
+.upload-form-meta input {
+  margin-top: 10px;
+}
+
+
+
+/* Main Interface */
 .overview-pane {
   width: 100%;
   height: 100%;
