--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -12,6 +12,7 @@ section {
   height: 94%;
 }
 
+
 /* Nav Bar*/
 .upload-form-meta {
   margin-top: 30px;
@@ -78,11 +79,26 @@ section {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background: #f1f1f1;
+  //background: #f9f9f9;
 }
 
 .search-bar {
-  //padding: 10px;
+  //padding-bottom: 10px;
+  border: none;
+  background: #fff;
+}
+
+.textarea-content {
+  width: 100%;
+  height: 100%;
+  font-size: 1.2em;
+  resize: none;
+  border: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  overflow-y: scroll;
 }
 
 .overview-content {
@@ -95,7 +111,7 @@ section {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background: #f1f1f1;
+  //background: #f9f9f9;
 }
 
 /* Bootstrap Overrides */
@@ -132,6 +148,11 @@ section {
   margin-left: 0;
   margin-right: 0;
 }*/
+
+pre {
+  background-color: transparent;
+  border: 0;
+}
 
 /* Media Queries  */
 @media (max-width: 979px) {
