--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -127,6 +127,7 @@ section {
 
 .custom-overview-pane {
   padding-right: 7.5px;
+  z-index: 1;
 }
 
 .custom-visualisation-pane {
@@ -149,7 +150,7 @@ section {
   margin-right: 0;
 }*/
 
-#selected-word {  
+#selected-word {
   outline: none;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -160,6 +161,14 @@ section {
 pre {
   background-color: transparent;
   border: 0;
+}
+
+.alert {
+	position:absolute;
+  z-index:2;
+  width: 98%;
+  padding: 1%;
+  text-align: center;
 }
 
 /* Media Queries  */
