--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -114,7 +114,7 @@ section {
   height: 100%;
   min-height: 100%;
   text-align: center;
-  //background: #f9f9f9;
+  overflow-y: scroll;
 }
 
 /* Bootstrap Overrides */
@@ -209,29 +209,15 @@ pre {
 
 .wordcloud {
   width: 100%;
-  height: 500px;
+  //height: 500px;
+  margin-top: 100px;
 }
 
-.wordcontext {
-  /*width:100%;
-  height: 100%;
-  min-height: 100%;*/
-}
-
-.btn {
-  border-radius: 0 !important;
-}
 
 #search-bar-button {
-  border-left-width: 0;
+  //border-left-width: 0;
   margin-right: 5px;
 }
-
-.search-control {
-  border-radius: 0 !important;
-}
-
-
 
 .placeholder {
   font-size: 5em;
@@ -240,6 +226,11 @@ pre {
   height: 700px;
   line-height: 700px;
   text-align: center;
+}
+
+
+emotion, person, personcontext, time, place, action, animal {
+  background-color: pink;
 }
 
 
